# TaskLyric

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  main.py
betterncm-plugin/: README.md  main.js  manifest.json
betterncm-plugin/native/: README.md
docs/: architecture.md
fixtures/: sample_events.json  sample_lyric.json  sample_song_detail.json
host/: CMakeLists.txt
host/include/tasklyric/: host_context.hpp  host_exports.hpp
host/src/: dllmain.cpp  exports.cpp  host_context.cpp
installer/: README.md  package_tasklyric.ps1
native/: CMakeLists.txt
native/include/tasklyric/: native_bridge.hpp  taskbar_dcomp_renderer.hpp  taskbar_locator.hpp  taskbar_window.hpp
native/src/: native_bridge.cpp  taskbar_dcomp_renderer.cpp  taskbar_locator.cpp  taskbar_window.cpp
runtime/: tasklyric.runtime.js
scripts/: get_media_sessions.ps1  probe_taskbar.py  run_runtime_dev.mjs  run_runtime_dev.py  runtime_bridge_server.py  smoke_test_host.py
src/netease_taskbar_lyrics/: __init__.py  app.py  cloudmusic.py  host_bridge.py  lrc.py  netease_api.py  overlay.py  smtc.py
tmp/orpheus_extract/pub/: 404.html  COMMITHASH  VERSION  app.html  asset-manifest.json  checkdata.html  index.html  subApp.html
tmp/orpheus_extract/pub/hybrid/: 0.chunk.3c26437.js  1.chunk.3c26437.js  10.chunk.3c26437.js  100.chunk.3c26437.js  101.chunk.3c26437.js  102.chunk.3c26437.js  103.chunk.3c26437.js  104.chunk.3c26437.js  105.chunk.3c26437.js  106.chunk.3c26437.js  107.chunk.3c26437.js  (+195 more)
tools/TaskLyric.MediaSessionHelper/: Program.cs  TaskLyric.MediaSessionHelper.csproj
(+18 files in other folders)
